kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-application
  template:
    metadata:
      labels:
        app: spring-boot-application
    spec:
      containers:
        - name: spring-boot-container
          image: lasjiny/kafka-app:latest # Docker Hub의 사용자명과 레파지토리명을 사용하세요.
          imagePullPolicy: Always
          ports:
            - containerPort: 8080 # 어플리케이션이 노출하는 포트로 변경해야 합니다.
---
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-service
spec:
  selector:
    app: spring-boot-application
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080 # 어플리케이션이 노출하는 포트로 변경해야 합니다.
