kube/mimir-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mimir-deployment
  namespace: saas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mimir
  template:
    metadata:
      labels:
        app: mimir
    spec:
      containers:
        - name: mimir-container
          image: grafana/mimir:latest # Mimir의 정확한 이미지 버전 사용
          imagePullPolicy: Always
          ports:
            - containerPort: 3100 # Mimir의 기본 포트
          volumeMounts:
            - name: config-volume
              mountPath: /etc/mimir
      volumes:
        - name: config-volume
          configMap:
            name: mimir-config

---
apiVersion: v1
kind: Service
metadata:
  name: mimir-service
  namespace: saas
spec:
  type: NodePort
  selector:
    app: mimir
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3100
