kube/saas-bff-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saas-bff-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: saas-bff
  template:
    metadata:
      labels:
        app: saas-bff
    spec:
      containers:
        - name: saas-bff-container
          image: yosigoon/saas-bff:saas-bff-application-release-dev_hyeongwon-6fb62e26e79b224ed0d4bf01cbd0f0a18a2c605c
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6000
---
apiVersion: v1
kind: Service
metadata:
  name: saas-bff-service
spec:
  selector:
    app: saas-bff
  ports:
    - protocol: TCP
      port: 80
      targetPort: 6000
