kube/springboot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-application
  template:
    metadata:
      labels:
        app: spring-boot-application
    spec:
      containers:
        - name: spring-boot-container
          image: jaeholee1104/my_docker_hub:release-dev_jaeho-0cc5de7e863c3356097d2f00767dbd72f5c08eef
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-service
spec:
  selector:
    app: spring-boot-application
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
